sonarqube clearing