@@ -3,13 +3,12 @@ package hr.algebra.semregprojectbackend.service;
 import hr.algebra.semregprojectbackend.command.StudentUpdateCommand;
 import hr.algebra.semregprojectbackend.domain.Student;
 import hr.algebra.semregprojectbackend.dto.StudentDTO;
+import hr.algebra.semregprojectbackend.exception.StudentNotFoundException;
 import hr.algebra.semregprojectbackend.repository.StudentRepository;
-import jakarta.transaction.Transactional;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class StudentServiceImpl implements StudentService {
@@ -25,17 +24,13 @@ public class StudentServiceImpl implements StudentService {
     public List<StudentDTO> getAllStudents() {
         return studentRepo.findAll().stream()
                 .map(StudentDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // Dohvati studenta prema imenu
     @Override
     public Optional<StudentDTO> getStudentByEmail(String email) {
         return studentRepo.findByEmailIgnoreCase(email.trim()).map(StudentDTO::new);
     }
-
-
-
 
     @Override
     public Optional<StudentDTO> save(StudentUpdateCommand studentUpdateCommand) {
@@ -47,8 +42,6 @@ public class StudentServiceImpl implements StudentService {
         return Optional.of(new StudentDTO(savedStudent));
     }
 
-
-
     @Override
     public Optional<StudentDTO> updateStudent(Long id, StudentUpdateCommand studentUpdateCommand) {
         Optional<Student> studentOpt = studentRepo.findById(id);
@@ -59,19 +52,17 @@ public class StudentServiceImpl implements StudentService {
             Student updatedStudent = studentRepo.save(student);
             return Optional.of(new StudentDTO(updatedStudent));
         } else {
-            throw new RuntimeException("Student with id " + id + " not found.");
+            throw new StudentNotFoundException(id);
         }
     }
 
-
-    // Obriši studenta prema ID-u
     @Override
     public void deleteById(Long id) {
         Optional<Student> studentOpt = studentRepo.findById(id);
         if (studentOpt.isPresent()) {
             studentRepo.deleteById(id);
         } else {
-            throw new RuntimeException("Student not found with id: " + id);
+            throw new StudentNotFoundException(id);
         }
     }
 }
